@@ -1,5 +1,5 @@
 /*
- * ARP Scan is Copyright (C) 2005-2007 Roy Hills, NTA Monitor Ltd.
+ * ARP Scan is Copyright (C) 2005-2008 Roy Hills, NTA Monitor Ltd.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
