@@ -3,7 +3,7 @@ $Id$
 This file gives a brief overview of the major changes between each arp-scan
 release.  For more details please read the ChangeLog file.
 
-2008-05-03 arp-scan 1.6.3:
+2008-07-17 arp-scan 1.7:
 
 * new --pcapsavefile (-W) option to save the ARP response packets to a pcap
   savefile for later analysis with tcpdump, wireshark or another program that
